Address items 5 and 19 - prevent notifications from covering nav bar; add an extra diet game result icon with 2 red circles for when both selections are wrong

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -522,6 +522,7 @@ hr.modal-separator {
 	position: absolute;
     left: 0;
     right: 0;
+    top: 50px;
 }
 #message-container .message-wrapper {
 	width: 100%;
